--- a/Color Project/index.html
+++ b/Color Project/index.html
@@ -10,7 +10,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" >
 </head>
 <body>
+    <div id="colorname"></div><br>
     <div class="container">
+        
         <button onclick="changeColors()"  type="button" class="btn btn-success">fixed set</button>
         <button onclick="autocolor()" type="button" class="btn btn-info">random rgb</button>
         <button onclick="randomcolor()" type="button" class="btn btn-danger">auto rgb</button>
